--- a/SportsStore.Tests/SportsStore.Tests.csproj
+++ b/SportsStore.Tests/SportsStore.Tests.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SportsStore\SportsStore.csproj" />
+    <ProjectReference Include="..\SportsStore.Data\SportsStore.Data.csproj" />
+    <ProjectReference Include="..\SportsStore.Models\SportsStore.Models.csproj" />
   </ItemGroup>
 
 </Project>
