--- a/SportsStore.Tests/SportsStore.Tests.csproj
+++ b/SportsStore.Tests/SportsStore.Tests.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\SportsStore\SportsStore.csproj" />
     <ProjectReference Include="..\SportsStore.Data\SportsStore.Data.csproj" />
     <ProjectReference Include="..\SportsStore.Models\SportsStore.Models.csproj" />
+    <ProjectReference Include="..\SportsStore.Utility\SportsStore.Utility.csproj" />
   </ItemGroup>
 
 </Project>
